Stage3 - class centre calculation

--- a/notebooks/amazonProductReviewAnalysis_luis.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_luis.ipynb
@@ -84,8 +84,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.22 ms, sys: 1.18 ms, total: 3.41 ms\n",
-      "Wall time: 1.89 s\n"
+      "CPU times: user 1.91 ms, sys: 996 µs, total: 2.91 ms\n",
+      "Wall time: 1.34 s\n"
      ]
     }
    ],
@@ -198,20 +198,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------+---------------+-------------+\n",
-      "|unique_customers|unique_products|total_reviews|\n",
-      "+----------------+---------------+-------------+\n",
-      "|           57062|          58745|        99977|\n",
-      "+----------------+---------------+-------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql.functions import col, count, countDistinct, when, isnull\n",
     "\n",
@@ -219,7 +206,7 @@
     "                    countDistinct(\"product_id\").alias(\"unique_products\"), \\\n",
     "                    count(col=\"review_id\").alias(\"total_reviews\")) \\\n",
     "\n",
-    "dfOverallStats.show()"
+    "#dfOverallStats.show()"
    ]
   },
   {
@@ -391,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,13 +386,6 @@
      "output_type": "stream",
      "text": [
       "number of rows before filter: 99977\n",
-      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
-      "|customer_id|     review_id|product_id|       product_title|product_category|star_rating|helpful_votes|total_votes|     review_headline|         review_body|review_date|\n",
-      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
-      "|   27664622|R3LGC3EKEG84PX|B00B6QXN6U|Same Trailer Diff...|           Music|          5|            0|          0|A new fave in our...|This is the album...| 2015-08-31|\n",
-      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
-      "only showing top 1 row\n",
-      "\n",
       "number of rows post filter: 28955\n"
      ]
     }
@@ -418,15 +398,15 @@
     "\n",
     "dfFilteredReviews = dfFilteredReviews.filter(helper.FilterSentences('review_body'))\n",
     "\n",
-    "dfFilteredReviews.show(1)\n",
+    "#dfFilteredReviews.show(1)\n",
     "dfFilteredReviews.cache()\n",
     "\n",
-    "print(\"number of rows post filter: {0}\".format(dfFilteredReviews.count()))"
+    "print(\"number of rows post filter: {0}\".format(dfFilteredReviews.count())) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +490,7 @@
        "DataFrame[customer_id: string, review_id: string, product_id: string, product_title: string, product_category: string, star_rating: int, helpful_votes: int, total_votes: int, review_headline: string, review_body: string, review_date: date]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,17 +615,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyspark.sql.functions import col, count, countDistinct, when, isnull\n",
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import count\n",
+    "import pyspark.sql.functions as F\n",
+    "\n",
     "filtered_data = \"../output/part-*.csv\"\n",
     "dfBaseDataset = spark.read.csv(filtered_data,header=True,sep=\"\\t\",schema=aws_product_review_schema_limited)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +644,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28955"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfBaseDataset.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -751,19 +756,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0511 18:10:11.913211 140735894979520 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'customHelpers' from '/Users/luisedumuller/Documents/Studies/MDS/CloudComputing/Assignment2/COMP5349_AmazonProductReviewAnalysis/notebooks/customHelpers.py'>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
     "import numpy as np\n",
-    "from pyspark.sql.types import StructType, StructField, StringType,IntegerType, FloatType,BooleanType,DateType,ArrayType\n"
+    "from pyspark.sql.types import StructType, StructField, StringType,IntegerType, FloatType,BooleanType,DateType,ArrayType\n",
+    "\n",
+    "reload(helper)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,13 +848,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CPU times: user 6.28 ms, sys: 8.98 ms, total: 15.3 ms\n",
+      "Wall time: 22.8 s\n",
       "Average cosine distance between positive reviews: 0.6777541090667892\n"
      ]
     }
@@ -843,23 +871,25 @@
     "#eg: ((vect0,0), (vect1,1)), ((vect1,1), (vect2,2)), etc... \n",
     "neg_distances = neg_vect_index.cartesian(neg_vect_index) \\\n",
     "                       .map(helper.CosineDistance) \\\n",
-    "                       .filter(lambda x: x[0]!=0)\n",
+    "                       .filter(lambda x: x[2] != 0.0)\n",
     "\n",
-    "neg_result = neg_distances.collect()\n",
-    "neg_avg = sum(i[0] for i in neg_result)/len(neg_result)\n",
+    "%time neg_result = neg_distances.collect()\n",
+    "neg_avg = sum(i[2] for i in neg_result)/len(neg_result)\n",
     "\n",
     "print(\"Average cosine distance between positive reviews: {0}\".format(neg_avg))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CPU times: user 7.38 ms, sys: 5.05 ms, total: 12.4 ms\n",
+      "Wall time: 24.2 s\n",
       "Average cosine distance between positive reviews: 0.6657311997824882\n"
      ]
     }
@@ -869,10 +899,10 @@
     "\n",
     "pos_distances = pos_vect_index.cartesian(pos_vect_index) \\\n",
     "                       .map(helper.CosineDistance) \\\n",
-    "                       .filter(lambda x: x[0]!=0)\n",
+    "                       .filter(lambda x: x[2] != 0.0)\n",
     "\n",
-    "pos_result = pos_distances.collect()\n",
-    "pos_avg = sum(i[0] for i in pos_result)/len(pos_result)\n",
+    "%time pos_result = pos_distances.collect()\n",
+    "pos_avg = sum(i[2] for i in pos_result)/len(pos_result)\n",
     "\n",
     "print(\"Average cosine distance between positive reviews: {0}\".format(pos_avg))"
    ]
@@ -889,10 +919,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.functions import count, avg\n",
+    "\n",
+    "aws_distances_schema = StructType([\n",
+    "    StructField(\"id_origin\", IntegerType(), True),\n",
+    "    StructField(\"id_dest\", IntegerType(), True),\n",
+    "    StructField(\"distances\",FloatType(), True)])\n",
+    "\n",
+    "dfNegDistances = spark.createDataFrame(neg_distances,aws_distances_schema)\n",
+    "dfPosDistances = spark.createDataFrame(pos_distances,aws_distances_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Center sentence from Positive class with minimum average distance\n",
+      "+---------+------------------+\n",
+      "|id_origin|    avg(distances)|\n",
+      "+---------+------------------+\n",
+      "|       13|0.5181285652357179|\n",
+      "+---------+------------------+\n",
+      "\n",
+      "Ten closest sentences from positive class centre:\n",
+      "+---------+-------+----------+\n",
+      "|id_origin|id_dest| distances|\n",
+      "+---------+-------+----------+\n",
+      "|       13|     14|0.17537284|\n",
+      "|       13|     53|0.20937957|\n",
+      "|       13|     62|0.26685855|\n",
+      "|       13|     21|0.28175992|\n",
+      "|       13|     31|0.30157587|\n",
+      "|       13|      3|0.30667576|\n",
+      "|       13|     57|0.31021476|\n",
+      "|       13|     29|0.31616253|\n",
+      "|       13|      8|0.32270247|\n",
+      "|       13|     27|0.32730842|\n",
+      "+---------+-------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfPosCentre = dfPosDistances.groupBy(\"id_origin\").agg(avg(\"distances\")) \\\n",
+    "                       .orderBy(\"avg(distances)\") \\\n",
+    "                       .limit(1)\n",
+    "posCenterid  = dfPosCentre.collect()[0][0]\n",
+    "\n",
+    "print(\"Center sentence from Positive class with minimum average distance\")\n",
+    "dfPosCentre.show()\n",
+    "\n",
+    "dfPosClosest = dfPosDistances.where(col(\"id_origin\") == posCenterid) \\\n",
+    "                             .orderBy(\"distances\") \\\n",
+    "                             .limit(10)\n",
+    "\n",
+    "print(\"Ten closest sentences from positive class centre:\")\n",
+    "\n",
+    "dfPosClosest.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Center sentence from Negative class with minimum average distance\n",
+      "+---------+------------------+\n",
+      "|id_origin|    avg(distances)|\n",
+      "+---------+------------------+\n",
+      "|        0|0.5532332261403402|\n",
+      "+---------+------------------+\n",
+      "\n",
+      "Ten closest sentences from negative class centre:\n",
+      "+---------+-------+----------+\n",
+      "|id_origin|id_dest| distances|\n",
+      "+---------+-------+----------+\n",
+      "|        0|      2| 0.3353635|\n",
+      "|        0|      3|0.59003365|\n",
+      "|        0|      1| 0.7343025|\n",
+      "+---------+-------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfNegCentre = dfNegDistances.groupBy(\"id_origin\").agg(avg(\"distances\")) \\\n",
+    "                       .orderBy(\"avg(distances)\") \\\n",
+    "                       .limit(1)\n",
+    "\n",
+    "negCenterid  = dfNegCentre.collect()[0][0]\n",
+    "\n",
+    "print(\"Center sentence from Negative class with minimum average distance\")\n",
+    "dfNegCentre.show()\n",
+    "\n",
+    "dfNegClosest = dfNegDistances.where(col(\"id_origin\") == negCenterid) \\\n",
+    "                             .orderBy(\"distances\") \\\n",
+    "                             .limit(10)\n",
+    "\n",
+    "print(\"Ten closest sentences from negative class centre:\")\n",
+    "\n",
+    "dfNegClosest.show()"
+   ]
   },
   {
    "cell_type": "code",
