cosine distance calc using matrix manipulation

--- a/notebooks/amazonProductReviewAnalysis_nagib.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_nagib.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0512 14:07:03.241930 4691920320 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
+      "W0513 16:06:24.330469 4586583488 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
      ]
     },
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -991,41 +991,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'customHelpers' from '/Users/nagibshah/dev/COMP5349_AmazonProductReviewAnalysis/notebooks/customHelpers.py'>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(helper)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average cosine distance between negative reviews: 0.7155580738538467\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pyspark.ml.linalg import Vectors\n",
-    "reload(helper)\n",
-    "# create an rdd with PySparkVector and zip it with an index.\n",
-    "neg_vect_index = negative_review_embedding.map(Vectors.dense).zipWithIndex()\n",
-    "\n",
-    "#crete a cartesian combination of the vectors, index pair \n",
-    "#eg: ((vect0,0), (vect1,1)), ((vect1,1), (vect2,2)), etc... \n",
-    "neg_distances = neg_vect_index.cartesian(neg_vect_index) \\\n",
-    "                       .map(helper.CosineDistance) \\\n",
-    "                       .filter(lambda x: x[0]!=0)\n",
-    "\n",
-    "neg_result = neg_distances.collect()\n",
-    "neg_avg = sum(i[0] for i in neg_result)/len(neg_result)\n",
-    "\n",
-    "print(\"Average cosine distance between negative reviews: {0}\".format(neg_avg))"
-   ]
   },
   {
    "cell_type": "code",
@@ -9214,6 +9203,188 @@
     "Find out the class center and its 10 closest neighbours for positive and negative class respectively. We define class center as the point that has the smallest average distance to other points in the class. Again in this case point refers to the sentence encoding and pair-wise distance are measured by Cosine distance.\n",
     "The result should show the text of the center sentence, the review id it belongs to and its 10 closest neighbouring sentences text and their respective review id."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'customHelpers' from '/Users/nagibshah/dev/COMP5349_AmazonProductReviewAnalysis/notebooks/customHelpers.py'>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(helper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized using L2 norm\n",
+      "+--------------+--------------------+--------------------+\n",
+      "|     review_id|             vectors|        normFeatures|\n",
+      "+--------------+--------------------+--------------------+\n",
+      "|R2P2KVK3GRJBHP|[-0.0506365746259...|[-0.0506365814959...|\n",
+      "|R2P2KVK3GRJBHP|[-0.0580368600785...|[-0.0580368628959...|\n",
+      "|R2P2KVK3GRJBHP|[0.03794876486063...|[0.03794876963988...|\n",
+      "|R2P2KVK3GRJBHP|[0.03115259110927...|[0.03115259288005...|\n",
+      "|R1HY9W9AU5S4WB|[0.01509211771190...|[0.01509211794457...|\n",
+      "+--------------+--------------------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.feature import Normalizer\n",
+    "\n",
+    "normalizer = Normalizer(inputCol=\"vectors\", outputCol=\"normFeatures\") # default uses L2 norm \n",
+    "l2NegNormData = normalizer.transform(dfNegSentsVectorised)\n",
+    "print(\"Normalized using L2 norm\")\n",
+    "l2NegNormData.show(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(Row(review_id='R2P2KVK3GRJBHP', normFeatures=DenseVector([-0.0506, 0.002, -0.0256, -0.0092, -0.0636, 0.0052, -0.0069, 0.0087, 0.0357, 0.0315, 0.0764, -0.0637, 0.0233, 0.0507, 0.0457, 0.0611, -0.0274, -0.0113, -0.0015, 0.0041, 0.0306, -0.0607, 0.0022, -0.0587, 0.014, 0.0033, -0.0296, -0.0767, -0.0062, -0.0664, 0.0265, -0.0523, 0.028, -0.0001, 0.0277, -0.0082, -0.0735, 0.02, -0.016, 0.0119, 0.0343, 0.0356, 0.0755, -0.0602, -0.0555, 0.0448, 0.0425, -0.0005, 0.0235, 0.0455, 0.0136, 0.0656, -0.0124, 0.0063, 0.0662, 0.0729, 0.0339, 0.0283, -0.0391, 0.0359, 0.0375, -0.0849, -0.0092, -0.0265, -0.0098, -0.0041, 0.0551, -0.0489, 0.0791, 0.0737, -0.009, -0.0613, 0.0225, -0.01, 0.0285, 0.0366, 0.0845, -0.0057, -0.0537, 0.0481, 0.0798, -0.0531, 0.0883, -0.0268, 0.0542, -0.0147, -0.0166, -0.0352, 0.0137, -0.076, 0.0692, -0.0102, -0.0055, 0.0447, 0.0428, -0.0311, -0.0179, -0.0239, 0.0334, 0.0237, -0.0476, -0.0364, -0.0103, 0.0401, 0.0612, 0.0294, -0.0075, 0.0102, -0.0591, -0.0244, 0.0584, 0.029, -0.0042, -0.0461, -0.0675, 0.0599, -0.0187, -0.055, -0.0738, 0.0204, 0.0638, -0.0405, 0.0429, 0.0609, 0.0244, -0.0689, -0.0488, -0.0576, -0.0596, 0.0117, -0.0694, -0.0132, -0.0154, 0.0038, 0.0793, 0.0462, -0.0763, -0.0472, 0.0759, -0.0073, -0.0135, 0.0191, -0.0514, -0.0855, 0.0274, 0.0369, 0.0008, 0.0711, -0.0403, -0.0078, 0.0272, -0.0584, 0.0533, -0.0105, -0.0066, 0.0028, 0.029, -0.0046, 0.0759, -0.0217, -0.0724, -0.0761, 0.0517, -0.0135, 0.016, -0.0254, 0.0578, 0.0493, -0.0046, 0.0244, 0.0085, -0.048, -0.0502, -0.0389, 0.086, -0.0597, 0.0063, 0.0162, -0.0765, 0.0328, 0.0546, 0.0066, 0.0481, 0.0726, 0.0516, -0.0551, 0.0464, 0.0464, -0.0567, 0.0232, 0.0349, -0.0682, 0.0585, -0.0339, 0.0585, -0.064, 0.0645, -0.0074, -0.0473, 0.0646, 0.0243, -0.014, 0.0198, 0.0591, 0.056, -0.0244, 0.0386, 0.0457, 0.0294, -0.0439, 0.0692, -0.0128, 0.051, 0.0802, -0.0187, -0.0051, 0.029, 0.0596, 0.0218, 0.0118, -0.0076, -0.0253, 0.0139, -0.0422, -0.0263, 0.0558, -0.0817, 0.0623, 0.0542, -0.0644, 0.0253, -0.0355, 0.008, -0.0366, 0.0256, -0.0882, 0.0145, 0.0647, 0.0596, -0.0505, -0.0386, 0.0156, 0.0365, 0.0685, 0.0467, 0.0236, -0.0042, 0.0323, 0.0461, 0.0086, 0.0616, 0.0399, 0.0363, 0.0362, 0.0659, 0.0121, -0.0257, -0.0099, -0.0447, -0.0537, 0.0373, -0.0419, -0.0618, 0.0054, 0.0566, -0.0148, -0.0213, -0.0172, -0.0409, 0.0054, 0.0068, 0.0619, 0.0049, -0.0606, -0.0723, 0.0692, -0.0175, -0.0243, 0.0001, -0.0181, -0.0143, 0.0054, 0.0882, -0.0321, -0.0484, -0.0124, 0.0066, 0.0201, 0.0034, 0.0295, -0.069, -0.0729, 0.0107, -0.0728, 0.01, 0.0117, 0.0095, 0.0225, -0.0531, -0.007, -0.0059, 0.0603, 0.0112, 0.0396, -0.0326, -0.01, 0.0151, 0.0414, 0.0428, -0.0659, 0.0698, 0.0454, 0.0197, -0.0268, -0.0305, 0.0181, -0.0493, -0.01, -0.0159, -0.081, 0.0243, -0.0171, 0.0051, -0.0111, -0.0579, 0.0539, -0.0431, -0.0609, 0.0795, -0.0021, -0.0263, 0.013, -0.049, -0.0781, 0.017, -0.0281, 0.0117, 0.0721, 0.0406, -0.0315, 0.0308, 0.0594, -0.0543, 0.0567, 0.053, 0.0187, 0.012, 0.0542, 0.0016, 0.0501, 0.0325, -0.0615, -0.0243, -0.002, -0.0462, 0.0002, -0.0004, -0.0196, 0.0242, -0.0031, 0.0317, 0.0291, 0.0117, -0.0483, 0.0256, -0.069, 0.0114, 0.0407, 0.0389, 0.0738, 0.0186, -0.0304, 0.054, 0.0082, -0.0007, 0.002, 0.0596, -0.0287, 0.0388, 0.0227, 0.0416, -0.0267, 0.0098, 0.0544, -0.0376, 0.0671, 0.0675, -0.0461, -0.082, -0.0023, 0.0165, 0.033, 0.0036, 0.0213, -0.0109, -0.0395, 0.0534, -0.0355, 0.0062, 0.0347, 0.0184, 0.0341, -0.0665, -0.0611, 0.0445, -0.0199, 0.0095, 0.0649, 0.0048, 0.0063, -0.0018, -0.0085, -0.0406, -0.0092, -0.0785, 0.0692, -0.0125, 0.074, 0.0267, -0.0412, 0.0883, -0.0178, -0.0228, -0.0235, -0.0858, 0.0616, -0.0464, -0.0334, -0.0637, -0.036, 0.0492, -0.0591, 0.0774, 0.0503, -0.0227, 0.0375, -0.023, 0.0626, -0.0158, -0.0039, 0.045, -0.0427, 0.0601, 0.0147, 0.0529, -0.0284, -0.0344, 0.0842, 0.0312, -0.0418, -0.0021, -0.0668, -0.0264, -0.055, 0.0106, -0.0853, 0.0846, 0.0295, -0.074, -0.0254, 0.0135, -0.0221, -0.0649, -0.0521, 0.0222, -0.0331, -0.0276, -0.0522, -0.0475, -0.0204, -0.0696, -0.0164, 0.0531, -0.0146, 0.0215, 0.0746, -0.0712, 0.0484, 0.0227, -0.0413, 0.0765, -0.0329, -0.0333, -0.0829, 0.0152, -0.0711, 0.0587, 0.0392, -0.0639, -0.0204, -0.0107, 0.0316, 0.0046, -0.0331, 0.0312, 0.0411, 0.019, 0.0434, -0.0401, 0.0481, 0.0145, 0.0424, 0.0747, -0.0203, 0.0594, -0.0844, 0.0585, -0.0539, 0.0752, 0.0075, -0.0409, -0.0035])), 0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "masterNegMapData = l2NegNormData.select(\"review_id\",\"normFeatures\").rdd.zipWithIndex().cache()\n",
+    "print(masterNegMapData.take(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.mllib.linalg.distributed import IndexedRow, IndexedRowMatrix\n",
+    "#mat = IndexedRowMatrix(masterMapData.map(lambda row: IndexedRow(row.review_id, row.normFeatures.toArray()))) \\\n",
+    "#            .toBlockMatrix()\n",
+    "\n",
+    "def calc_distance(row):\n",
+    "    rowid = row.index\n",
+    "    distances = 1-row.vector\n",
+    "    # now get the sums \n",
+    "    totalDistance = distances.toArray().sum()\n",
+    "    length = len(distances.toArray())\n",
+    "    avg = totalDistance / length\n",
+    "    return (rowid, avg)\n",
+    "\n",
+    "matNeg = IndexedRowMatrix(masterNegMapData.map(lambda row: IndexedRow(row[1], (row[0][1]).toArray()))).toBlockMatrix()\n",
+    "dotNeg = matNeg.multiply(matNeg.transpose())\n",
+    "negCosines = dotNeg.toIndexedRowMatrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test = dot.toIndexedRowMatrix()\n",
+    "# calculate the avg negative distances \n",
+    "avgNegDistances = negCosines.rows.map(lambda row: calc_distance(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(147, 0.6603121269072003), (19, 0.7631380686764193), (39, 0.6497401823067195), (297, 0.7448456777501764), (71, 0.7863506432706412)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print a few rows \n",
+    "print(avgNegDistances.take(5))\n",
+    "\n",
+    "#test2 = test.rows.map(lambda row: IndexedRow(row.index, (1-row.vector)))\n",
+    "#test2 = test.rows.map(lambda row: calc_distance(row))\n",
+    "\n",
+    "#row.vector.toArray().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
